# projects_and_contracts

./: .env.template  .pre-commit-config.yaml  Dockerfile  README.md  docker-compose.yml  errors.py  main.py  pyproject.toml  settings.py  validators.py
business_logic/: __init__.py  contracts.py  projects.py
data_access/: db_connector.py  interfaces.py
data_access/dao/: __init__.py  base.py  contracts.py  projects.py  statuses.py
data_access/dto/: __init__.py  contracts.py  projects.py
database/: DB_diagram.xml  create_tables.sql  fill_tables.sql
ui_layer/: __init__.py  contracts_ui.py  main_ui.py  projects_ui.py  services.py
